--- a/Devops/Kubernetes/yaml/ReplicaSet/rs.yml
+++ b/Devops/Kubernetes/yaml/ReplicaSet/rs.yml
@@ -1,17 +1,21 @@
-apiVersion: v1
-kind: ReplicationController
+apiVersion: apps/v1
+kind: ReplicaSet
 metadata:
-  name: test-rc
+  name: test-rs
   labels:
     type: test
 spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      type: prod
   template:
     metadata:
       name: pooo
       labels:
-        type: pod
+        type: prod
+        rescource: pod
     spec:
       containers:
         - name: cooo
           image: nginx
-  replicas: 3
