--- a/Devops/Kubernetes/yaml/project/project-votingapp/3.voting-appworker.yml
+++ b/Devops/Kubernetes/yaml/project/project-votingapp/3.voting-appworker.yml
@@ -16,5 +16,5 @@ spec:
         app: voting-app
     spec:
       containers:
-        - name:  voting-app
-          image: nginx
+        - name:  voting-workerapp
+          image: kodekloud/examplevotingapp_worker:v1
