--- a/Devops/Kubernetes/yaml/project/project-votingapp/4.postgres-db.yml
+++ b/Devops/Kubernetes/yaml/project/project-votingapp/4.postgres-db.yml
@@ -16,5 +16,12 @@ spec:
         app: voting-app
     spec:
       containers:
-        - name:  voting-app
-          image: nginx
+        - name:  postgres
+          image: postgres
+          ports:
+            - containerPort: 5432
+          env:
+            - name: POSTGRES_USER
+              value: "postgres"
+            - name: POSTGRES_PASSWORD
+              value: "postgres"
