--- a/Devops/Kubernetes/yaml/project/project-votingapp/8.voting-app-np-svc.yml
+++ b/Devops/Kubernetes/yaml/project/project-votingapp/8.voting-app-np-svc.yml
@@ -7,8 +7,8 @@ metadata:
 spec:
   type: NodePort
   selector:
-    type: prod
+    app: voting-app
   ports:
     - port: 80
       targetPort: 80
-      nodePort: 30000
+      nodePort: 31000
