--- a/Devops/Kubernetes/yaml/project/project-votingapp/5.result-app.yml
+++ b/Devops/Kubernetes/yaml/project/project-votingapp/5.result-app.yml
@@ -16,5 +16,7 @@ spec:
         app: voting-app
     spec:
       containers:
-        - name:  voting-app
-          image: nginx
+        - name:  result-app
+          image: kodekloud/examplevotingapp_result:v1
+          ports:
+            - containerPort: 80
