--- a/Devops/Kubernetes/yaml/project/project-votingapp/2.redis-db.yml
+++ b/Devops/Kubernetes/yaml/project/project-votingapp/2.redis-db.yml
@@ -3,7 +3,8 @@ kind: Deployment
 metadata:
   name: redis-db-deployment
   labels:
-    app: redis-db
+    app: voting-app
+    type: redis-db-deployment
 spec:
   replicas: 1
   selector:
@@ -18,5 +19,5 @@ spec:
       containers:
         - name:  redis
           image: redis
-        - ports:
-            containerPort: 6379
+          ports:
+            - containerPort: 6379
