--- a/Devops/Kubernetes/yaml/project/project-votingapp/3.voting-appworker.yml
+++ b/Devops/Kubernetes/yaml/project/project-votingapp/3.voting-appworker.yml
@@ -1,20 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: voting-app-deployment
+  name: voting-appworker-deployment
   labels:
     app: voting-app
+    type: voting-appworker-deployment
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: voting-app
+      app: voting-appworker
   template:
     metadata:
-      name: voting-app
+      name: voting-appworker
       labels:
-        app: voting-app
+        app: voting-appworker
     spec:
       containers:
-        - name:  voting-workerapp
+        - name:  voting-appworker
           image: kodekloud/examplevotingapp_worker:v1
+          command: [ "/bin/bash", "-c", "--" ]
+          args: [ "while true; do sleep 30; done;" ]
