--- a/Devops/Kubernetes/yaml/project/project-votingapp/7.postgress-db-clusterip.yml
+++ b/Devops/Kubernetes/yaml/project/project-votingapp/7.postgress-db-clusterip.yml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+apiVersion: v1
 kind: Service
 metadata:
   name: db
@@ -7,8 +7,8 @@ metadata:
     type: cluster-ip-postgress
 spec:
   type: ClusterIP
-  Selector:
+  selector:
     app: postgress-db
   ports:
     - port: 3432
-      targetport: 3432
+      targetPort: 3432
