--- a/Devops/Kubernetes/yaml/advanced/Secret.yaml
+++ b/Devops/Kubernetes/yaml/advanced/Secret.yaml
@@ -10,3 +10,6 @@ data:
 
 
 ==================================================
+     env from secret file
+==================================================
+
