--- a/Devops/Kubernetes/yaml/advanced/Secret.yaml
+++ b/Devops/Kubernetes/yaml/advanced/Secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: test-configmap
+  name: test-secret
   labels:
     type: prod
 data:
@@ -13,3 +13,57 @@ data:
      env from secret file
 ==================================================
 
+apiVersion: v1
+kind: Pod
+metadata:
+  name: test-pod
+  labels:
+    type: prod
+spec:
+  containers:
+  - name: c1
+    image: nginx
+    envFrom:
+      - secretRef:
+          name: test-secret
+
+
+==================================================
+     env from secret keys
+==================================================
+
+apiVersion: v1
+kind: Pod
+metadata:
+  name: test-pod
+  labels:
+    type: prod
+  spec:
+    containers:
+      - name: c1
+        image: nginx
+        envFrom:
+          - secretKeyRef:
+              name: test-secret
+              key: db_passwd
+
+
+
+==================================================
+     env from volumes
+==================================================
+
+apiVersion: v1
+kind: Pod
+metadata:
+  name: test-pod
+  labels:
+    type: prod
+  spec:
+    containers:
+      - name: c1
+        image: nginx
+        volumes:
+          - name: app-secret-volume
+            secret:
+              secretName: app-secret
